@@ -33,6 +33,19 @@
 # ----------------------------------------------------------------------------
 # ---< General Settings >-----------------------------------------------------
 
+# Profile Name
+# --------------
+# An optional identifier used to distinguish this profile (i.e. collection of settings)
+# from other profiles. The profile name is displayed in the renderer in square
+# brackets after the software name e.g.
+#
+#     PS3 Media Server [myprofile]
+#
+# If not set, it defaults to the hostname.
+# See the FAQ for details on how to create and use multiple profiles:
+# http://www.ps3mediaserver.org/forum/viewtopic.php?f=6&t=3507&p=49895#p49895
+name =
+
 # Interface Language
 # -------------------
 # GUI option: Language (selector)
@@ -261,6 +274,12 @@ hidevideosettings = false
 # Control visibility of the Transcode folder on clients; contents of the
 # folder provide control over transcoding of video. Default value is false.
 hide_transcode_folder = false
+
+# Transcode Folder Name
+# ---------------------
+# Assign a different name to the #--TRANSCODE--# folder e.g. "Subtitles" or "Languages".
+# If not set, the localized version of "#--TRANSCODE--#" is used.
+transcode_folder_name =
 
 # Hide file extensions
 # --------------------
