@@ -3,7 +3,6 @@ DLNAMediaDatabase.1=A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z
 DLNAMediaDatabase.2=Cleanup database...
 DLNAMediaDatabase.3=Compacting database...
 DLNAMediaDatabase.4=Scanning Folder:
-DLNAResource.0=\#--TRANSCODE--\#
 FFMpegDVRMSRemux.0=Alternative FFmpeg Path:
 FFMpegDVRMSRemux.1=Settings for DVR-MS remuxing
 FFMpegVideo.0=Encoder settings for AviSynth/FFmpeg engine only (Prefer AviSynth/MEncoder)
@@ -296,4 +295,5 @@ TrTab2.63=Good quality for HD Wifi transcoding
 TrTab2.64=Medium quality for HD Wifi transcoding
 TrTab2.65=Low quality, low-end CPU or HD Wifi transcoding
 TracesTab.3=Clear
+TranscodeVirtualFolder.0=\#--TRANSCODE--\#
 TreeNodeSettings.4=This engine is not loaded\!
